[package]
name = "manta-trusted-setup"
version = "0.5.8"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE" 
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "MPC Ceremonies for Trusted Setup SRS Generation"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "groth16_phase2_client"
required-features = ["clap", "ppot-client", "reqwest", "tokio"]

[features]
# Bincode for Message Signing
bincode = ["dep:bincode", "serde"]

# PPoT Client Features
ppot-client = [
    "bincode",
    "bs58",
    "colored",
    "console",
    "csv",
    "dialoguer",
    "hex/std",
    "parking_lot",
    "ppot",
    "tiny-bip39",
]

# CSV for Ceremony Registries
csv = ["dep:csv", "serde", "std"]

# Perpetual Powers of Tau Ceremony
ppot = ["openzl-plugin-arkworks/bn254"]

# Rayon Parallelization
rayon = ["openzl-util/rayon"]

# Reqwest HTTP Client
reqwest = ["openzl-util/reqwest"]

# Serde Serialization
serde = [
    "hex?/serde",
    "openzl-crypto/serde",
    "openzl-util/serde",
]

# Standard Library
std = ["openzl-util/std"]

# Testing Frameworks
test = ["openzl-crypto/test"]

# Tide HTTP Server
tide = ["openzl-util/tide"]

[dependencies]
bincode = { version = "1.3.3", optional = true, default-features = false }
blake2 = { version = "0.10.4", default-features = false }
bs58 = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }
clap = { version = "3.2.22", optional = true, default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
colored = { version = "2.0.0", optional = true, default-features = false }
console = { version = "0.15.1", optional = true, default-features = false }
csv = { version = "1.1.6", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
dialoguer = { version = "0.10.2", optional = true, default-features = false }
eclair = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false }
memmap = { version = "0.7.0", optional = true, default-features = false }
openzl-crypto = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
openzl-plugin-arkworks = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false, features = ["groth16"] }
openzl-plugin-dalek = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
openzl-util = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false, features = ["getrandom", "rand_chacha"] }
parking_lot = { version = "0.12.1", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
tiny-bip39 = { version = "1.0.0", optional = true, default-features = false } 
tokio = { version = "1.21.1", optional = true, default-features = false, features = ["rt-multi-thread", "io-std"] }

[dev-dependencies]
manta-accounting = { path = "../manta-accounting", default-features = false }
manta-parameters = { path = "../manta-parameters", default-features = false, features = ["download"] }
manta-trusted-setup = { path = ".", default-features = false, features = ["std", "test"] }
memmap = { version = "0.7.0", default-features = false }
openzl-plugin-arkworks = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false, features = ["bn254"] }
tempfile = { version = "3.3.0", default-features = false }
