[package]
name = "manta-trusted-setup"
version = "0.5.15"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE" 
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "MPC Ceremonies for Trusted Setup SRS Generation"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "groth16_phase2_client"
required-features = ["client"]

[[bin]]
name = "groth16_phase2_prepare"
required-features = ["coordinator"]

[[bin]]
name = "groth16_phase2_server"
required-features = ["coordinator"]

[[bin]]
name = "groth16_phase2_verifier"
required-features = ["coordinator"]

[features]
# Bincode for Message Signing
bincode = ["dep:bincode", "serde"]

# Trusted Setup Ceremony
ceremony = [
    "bincode",
    "bs58",
    "chrono",
    "clap",
    "colored",
    "console",
    "csv",
    "dialoguer",
    "manta-crypto/ark-bn254",
    "reqwest",
    "serde",
    "tiny-bip39",
    "tokio",
 ]

# Trusted Setup Client
client = [
    "async-std", 
    "ceremony",
    "hex/std",
    "manta-util/tide",
    "parking_lot",
]

# Trusted Setup Coordinator
coordinator = ["client", "memmap", "parking_lot", "serde_json", "std"]

# CSV for Ceremony Registries
csv = ["dep:csv", "serde", "std"]

# Rayon Parallelization
rayon = ["manta-util/rayon"]

# Reqwest HTTP Client
reqwest = ["manta-util/reqwest"]

# Serde Serialization
serde = [
    "hex?/serde",
    "manta-crypto/serde",
    "manta-util/serde",
    "manta-util/serde-alloc",
    "manta-util/serde-array",
]

# Standard Library
std = ["ark-std/std", "hex/std", "manta-util/std"]

# Testing Frameworks
test = ["manta-crypto/test"]

[dependencies]
ark-groth16 = { version = "0.3.0", default-features = false }
ark-poly = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
async-std = { version = "1.6.0", optional = true, features = ["attributes", "tokio1"] }
bincode = { version = "1.3.3", optional = true, default-features = false }
blake2 = { version = "0.10.6", default-features = false }
bs58 = { version = "0.4.0", optional = true, default-features = false, features = ["alloc"] }
chrono = { version = "0.4.19", optional = true, default-features = false, features = ["clock"] }
clap = { version = "4.1.8", optional = true, default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
colored = { version = "2.0.0", optional = true, default-features = false }
console = { version = "0.15.4", optional = true, default-features = false }
csv = { version = "1.1.6", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
dialoguer = { version = "0.10.2", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false }
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["arkworks", "getrandom", "rand_chacha", "dalek"] }
manta-pay = { path = "../manta-pay", default-features = false, features = ["groth16", "parameters"] }
manta-util = { path = "../manta-util", default-features = false }
memmap = { version = "0.7.0", optional = true, default-features = false }
parking_lot = { version = "0.12.1", optional = true, default-features = false }
serde_json = { version = "1.0.91", optional = true, default-features = false, features = ["alloc"] }
tiny-bip39 = { version = "1.0.0", optional = true, default-features = false } 
tokio = { version = "1.24.1", optional = true, default-features = false, features = ["rt-multi-thread", "io-std", "io-util", "time"] }

[dev-dependencies]
ark-snark = { version = "0.3.0", default-features = false }
manta-accounting = { path = "../manta-accounting", default-features = false }
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["ark-bn254", "arkworks", "getrandom", "rand_chacha"] }
manta-parameters = { path = "../manta-parameters", default-features = false, features = ["download"] }
manta-trusted-setup = { path = ".", default-features = false, features = ["std", "test"] }
memmap = { version = "0.7.0", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
